# data-generation-sdk

./: .env.example  .gitignore  Dockerfile  LOCAL-SETUP.md  README.md  docker-compose.yml  pyproject.toml
.bench_simple/: plan.json
.bench_simple/py/: customers.csv
.github/workflows/: brew-formula.yml  ci.yml  publish.yml
adp-executor/: README.md  adp-executor  go.mod
adp-executor/cmd/adp-executor/: main.go
adp-executor/internal/exec/: generate.go
adp-executor/internal/plan/: plan.go
benchmarks/: bench_generation.py  bench_ingestion.py
benchmarks/fixtures/: seasonal-retail-spec.yaml
cursor-test/: adp.yaml  spec.yaml
docs/: AGENT-FLOW.md  ARCHITECTURE.md  DATA-MARKETPLACE.md  DATA-STORE-SKUS.md  GETTING-STARTED.md  LOAD.md  MARKET-RESEARCH.md  MCP-DATA-EXPLORER.md  MCP-GUIDE.md  OUTBOUND-TEMPLATES.md  PERFORMANCE.md  PRICING.md  PRODUCT-ROADMAP.md  SEASONALITY.md  SKILLS-MAP.md  SKILLS-REVIEW.md  SPEC-REFERENCE.md  UNIVERSAL-INGESTION.md  USE-CASES.md  USER-FLOW.md
docs/templates/: DATASET-LICENSE.md  research-notes.md
examples/: README.md
examples/customer-transaction/: INSTRUCTIONS.md  adp.yaml  distribution-validation.md  make_data.py  quality-report.md
examples/customer-transaction/data/: dim_customer.csv
examples/healthcare/: spec.yaml
examples/product-transactions/: spec.yaml
examples/retail/: adp.yaml  spec.yaml
examples/retail-ecommerce/: .gitignore  README.md  REQUIREMENTS-TO-GENERATE.md  adp.yaml  e2e-validation.md  make_data.py  quality-report.md  run_pipeline.sh
examples/retail-ecommerce/analytics/: sales_performance.sql
examples/retail-ecommerce/data/: customers.csv  orders.csv  products.csv  transactions.csv
examples/retail-ecommerce/docs/: data-dictionary.md
examples/retail-ecommerce/model/: cubes.yml
examples/shop/: make_data.py
examples/snowflake-to-snowflake/: .env.example  README.md  adp.yaml  spec.yaml
packaging/homebrew/: README.md  formula_template.rb  generate_formula.py  sync_tap.sh
packaging/homebrew-tap-scaffold/: README.md
packaging/homebrew-tap-scaffold/.github/workflows/: brew-test.yml
packaging/homebrew-tap-scaffold/Formula/: ai-data-platform.rb
scripts/: benchmark_performance.py  healthcare_e2e.py  test_sales_e2e.py  verify_quality.py
src/ai_data_platform/: __init__.py  cli.py  config.py  config_normalize.py  sdk.py  spec.py
src/ai_data_platform/agent/: __init__.py  setup.py  workflow.py
src/ai_data_platform/agent_skills/: WORKFLOW.md
src/ai_data_platform/agent_skills/adp-analytics-readiness/: SKILL.md
src/ai_data_platform/agent_skills/adp-calibrate/: SKILL.md
src/ai_data_platform/agent_skills/adp-domain-research/: SKILL.md
src/ai_data_platform/agent_skills/adp-generate-validate/: SKILL.md
src/ai_data_platform/agent_skills/adp-intake/: SKILL.md
src/ai_data_platform/agent_skills/adp-orchestrator/: SKILL.md
src/ai_data_platform/agent_skills/adp-spec-author/: SKILL.md
src/ai_data_platform/agent_skills/templates/: claude-code.instructions.txt  claude-desktop.snippet.json  mcp.cursor.json  mcp.vscode.json
src/ai_data_platform/api/: __init__.py  app.py
src/ai_data_platform/connectors/: __init__.py  base.py  duckdb_conn.py  files.py  placeholders.py  sql_db.py
src/ai_data_platform/core/: __init__.py  env.py  exceptions.py  graph.py  logging.py  paths.py
src/ai_data_platform/docs/: __init__.py  generator.py
src/ai_data_platform/explorer/: __init__.py  engine.py  insights.py  metastore.py  registrar.py  schemas.py  security.py  service.py
src/ai_data_platform/generator/: __init__.py  chunking.py  engine.py  executor_dispatch.py  samplers.py  seasonality.py  writers.py
src/ai_data_platform/ingestion/: __init__.py  cli.py  detector.py  duckdb_reader.py  engine.py  excel_reader.py  json_flattener.py  metadata.py  pg_dump.py  profiler.py  quality.py  sql_generator.py
src/ai_data_platform/load/: __init__.py  cli.py  config_models.py  destinations.py  engine.py  generate_load.py  ingestr.py  local_sources.py  ordering.py  partition_hints.py  plan.py  quality_gate.py  types.py
src/ai_data_platform/mcp/: __init__.py  server.py
src/ai_data_platform/metadata/: __init__.py  catalog.py  models.py  scan.py
src/ai_data_platform/optimizer/: __init__.py  batch_strategy.py  complexity_analyzer.py  execution_planner.py  memory_estimator.py  partition_planner.py
src/ai_data_platform/profiler/: __init__.py  profiler.py
src/ai_data_platform/quality/: __init__.py  checks.py  duckdb_checks.py  seasonality_report.py
src/ai_data_platform/semantic/: __init__.py  builder.py
src/ai_data_platform/sql/: __init__.py  assistant.py  providers.py
src/ai_data_platform/ui/: __init__.py
src/ai_data_platform/ui/static/: index.html
tests/: _ingest_helpers.py  conftest.py  test_agent_setup.py  test_catalog_profile.py  test_chunking.py  test_cli_api_mcp.py  test_config.py  test_config_normalize.py  test_connectors.py  test_csv.py  test_duckdb_quality.py  test_e2e_retail.py  test_excel.py  test_explorer.py  test_generate_load.py  test_generator.py  test_graph.py  test_json.py  test_large_files.py  test_load_config.py  test_load_destinations.py  test_load_engine.py  test_load_ingestr.py  test_load_sources.py  test_optimizer.py  test_parallel_generate.py  test_parquet.py  test_partition_hints.py  test_paths.py  test_quality_semantic_sql.py  test_seasonality.py  test_spec.py
web/: next.config.mjs  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/app/sources/: page.tsx
web/components/layout/: header.tsx  sidebar.tsx
web/components/shared/: badges.tsx  code-block.tsx  page-header.tsx  score-ring.tsx  stat-card.tsx  states.tsx
web/components/ui/: badge.tsx  button.tsx  progress.tsx  select.tsx  sheet.tsx  table.tsx  tabs.tsx  tooltip.tsx
web/lib/: nav.ts  utils.ts
web/lib/api/: client.ts  hooks.ts  types.ts
