[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-data-platform"
dynamic = ["version"]
description = "AI Data Platform: metadata catalog, profiling, synthetic data generation, semantic models, NL-to-SQL, and MCP server — local-first."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Yogesh Khangode", email = "yogesh.khangode@tmdc.io" }]
keywords = [
  "synthetic-data", "metadata", "data-catalog", "mcp", "semantic-layer",
  "data-quality", "profiling", "duckdb", "polars",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "duckdb>=1.0",
  "polars>=1.0",
  "pyarrow>=16.0",
  "numpy>=1.26",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "fastapi>=0.111",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
mysql = ["pymysql>=1.1"]
load = [
  "ingestr[sdk]>=1.0",
]
llm = ["openai>=1.30"]
mcp = ["mcp>=1.2"]
# Country holiday calendars for the seasonality engine. Explicit `dates:` in a
# spec work without this; a `country:` code needs it.
seasonality = ["holidays>=0.50"]
# Universal ingestion: Excel + charset detection + Avro fallback. DuckDB reads
# csv/json/parquet/arrow/orc natively; delta/iceberg/cloud use DuckDB extensions
# installed at runtime. Legacy .xls additionally needs `xlrd`.
ingest = [
  "pandas>=2.0",
  "openpyxl>=3.1",
  "charset-normalizer>=3.0",
  "fastavro>=1.9",
]
ui = []          # UI assets ship in base; group reserved
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
  "build>=1.2",
  "twine>=5.0",
  "types-PyYAML",
]
all = [
  "psycopg[binary]>=3.1",
  "pymysql>=1.1",
  "openai>=1.30",
  "mcp>=1.2",
  "pandas>=2.0",
  "openpyxl>=3.1",
  "charset-normalizer>=3.0",
  "fastavro>=1.9",
  "holidays>=0.50",
  "ingestr[sdk]>=1.0",
]

[project.scripts]
adp = "ai_data_platform.cli:app"

[project.urls]
Homepage = "https://github.com/Yogi776/data-generation-sdk"
Documentation = "https://github.com/Yogi776/data-generation-sdk#readme"
Issues = "https://github.com/Yogi776/data-generation-sdk/issues"
Repository = "https://github.com/Yogi776/data-generation-sdk"
Source = "https://github.com/Yogi776/data-generation-sdk"

[tool.hatch.version]
path = "src/ai_data_platform/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_data_platform"]
# Include agent_skills data files (SKILL.md, JSON templates) in the wheel.
# agent_skills has no __init__.py so hatch needs explicit inclusion.
include = ["src/ai_data_platform/agent_skills"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "examples", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501", "B008", "SIM108", "B905"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
